add README.md and comments

--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,6 @@ button:disabled {
 .change {
   background-color: var(--sort-unit-color-change) !important;
 }
+.sorting {
+  border-color: darkred;
+}
